calculator/devops/calculator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: calculator.odin.thecodedom.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calculator-service
            port:
              number: 80
  tls:
  - hosts:
    - calculator.odin.thecodedom.com
    secretName: calculator-tls
